<resources>
    <string name="app_name">UiTesting</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_retype_password">Retype Password</string>
    <string name="button_register">Register</string>
    <string name="register_error">Passwords do not match</string>
    <string name="register_success">Registration successful, you may login now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>